--- a/client/templates/client/category_list.html
+++ b/client/templates/client/category_list.html
@@ -25,6 +25,7 @@
         
             <div class="buttons">
                 <a href="{% url 'category_detail' category.id %}" class="view-btn">View</a>
+                <a href="{% url 'edit_category' category.id %}" class="view-btn">Edit</a>
             </div>
         </div>
         {% empty %}
