--- a/users/templates/users/Profile/update_profile.html
+++ b/users/templates/users/Profile/update_profile.html
@@ -176,8 +176,8 @@
         <div class="profile-buttons">
             <div class="left-buttons">
                 <button type="submit" class="btn">Save Changes</button>
-                <a href="{% url 'show_profile' %}" class="btn cancel-btn">Cancel</a>
             </div>
+            <a href="{% url 'show_profile' %}" class="cancel-btn">Cancel</a>
         </div>
     </form>
 </div>
