--- a/users/static/users/css/dashboard.css
+++ b/users/static/users/css/dashboard.css
@@ -245,29 +245,33 @@ body {
 .view-all-button,
 .view-program-button {
   font-size: 12px;
-  padding: 6px 10px;
+  padding: 10px 14px;
   background-color: #F24505;
   color: white;
   text-decoration: none;
-  border-radius: 4px;
+  border-radius: 25px;
   font-weight: bold;
   border: none;
   cursor: pointer;
-  transition: background 0.2s;
+  text-align: center;
+  transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+  border: 2px solid #ffffff;
 }
 .view-all-button:hover,
 .view-program-button:hover {
-  background-color: #f24405a5;
+  background: #D43802;
+  color: white;
 }
 .view-module-button {
   display: inline-block;
   background: white;
   color: #F24505;
-  font-size: 0.9rem;
+  font-size: 12px;
   font-weight: bold;
-  padding: 8px 12px;
-  border-radius: 8px;
+  padding: 10px 14px;
+  border-radius: 25px;
   text-decoration: none;
+  cursor: pointer;
   text-align: center;
   transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
   border: 2px solid #F24505;
